# codex-desktop-windows

./: LICENSE  README.md  eslint.config.mjs  worklog.md
agent-ctx/: 2-b-frontend-builder.md
public/toolkit/: Cargo.toml  README.md  install.ps1
public/toolkit/launcher/: Cargo.toml  start.ps1.template  webview-server.py
public/toolkit/launcher/src/: main.rs
public/toolkit/packaging/: codex-desktop.nsi  codex-update-manager.xml
public/toolkit/scripts/: patch-windows.js
public/toolkit/scripts/lib/: Dmg-Extractor.ps1  Electron-Downloader.ps1  Native-Modules.ps1  Node-Runtime.ps1  Plugin-Manager.ps1
public/toolkit/updater/: Cargo.toml
public/toolkit/updater/src/: main.rs
src/app/: page.tsx
src/app/api/toolkit/[...filename]/: route.ts
src/components/: ArchitectureSection.tsx  CodeBlock.tsx  ComparisonSection.tsx  DownloadSection.tsx  FeaturesSection.tsx  FileExplorerSection.tsx  Footer.tsx  HeroSection.tsx  QuickStartSection.tsx
