[workspace]
resolver = "2"
members = [
    "launcher",
    "updater",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["OpenAI"]
license = "MIT"
repository = "https://github.com/openai/codex-desktop-windows"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
windows = { version = "0.58" }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
