[package]
name = "codex-desktop-launcher"
version = "1.0.0"
edition = "2021"
description = "Codex Desktop Launcher for Windows"
authors = ["OpenAI"]

[dependencies]
anyhow = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
which = "7"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
