[package]
name = "codex-update-manager"
version = "1.0.0"
edition = "2021"
description = "Codex Desktop Update Manager for Windows"
authors = ["OpenAI"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
windows = { version = "0.58", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Foundation",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
anyhow = "1"
directories = "5"
fs4 = "0.12"
semver = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
